deleted unnecessary stuff

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!-- don't forget title and body tags -->
 
 <body>
-<h1>Weekend Blueberry Pancakes Recipe!</h1>
+<h1>Weekend Blueberry Pancakes Recipe</h1>
 
 <h2>Basic Ingredients</h2>
 	<p>
