--- a/index.html
+++ b/index.html
@@ -2,20 +2,30 @@
 
 <html>
 <head>
-<title>Weekend Blueberry Pancakes Recipe</title>
+	<link href="recipe.css" rel="stylesheet">
+	<!-- add space before rel -->
+	
+	<title>Weekend Blueberry Pancakes Recipe</title>
 </head>
 <!-- don't forget title and body tags -->
+
 
 <body>
 <h1>Weekend Blueberry Pancakes Recipe</h1>
 
-<h2>Basic Ingredients</h2>
+<h2>Ingredients</h2>
+	<p>
+		<ul>
+		<li>2 eggs</li>
+		<li>2 cups pancake mix</li> 
+		<li>6 oz fresh blueberries</li>
+		<li>1 cup half and half</li>
+		<li>Nutella and maple syrup</li>
+		</ul>	
+	</p>
 	<p>
 		<img src="images/ingredients.jpeg">
 	</P>
-	<p>
-		2 cups pancake mix, 6 oz fresh blueberries, 1 cup half and half, 2 eggs
-	</p>
 
 <h2>Directions</h2>
 
