--- a/recipe/index.html
+++ b/recipe/index.html
@@ -24,14 +24,14 @@
 		</ul>	
 	</p>
 	<p>
-		<img src="recipe/images/ingredients.jpeg">
+		<img src="images/ingredients.jpeg">
 	</P>
 
 <h2>Directions</h2>
 
 <h3>Step 1</h3>
 	<p>
-		<img src="recipe/images/batter1.jpeg">
+		<img src="images/batter1.jpeg">
 	</P>
 	<p>
 		In a large mixing bowl, stir in pancake mix, half and half, and eggs.
@@ -39,7 +39,7 @@
 
 <h3>Step 2</h3>
 	<p>
-		<img src="recipe/images/batter2.jpeg">
+		<img src="images/batter2.jpeg">
 	</p>
 	<p>
 		Beat the eggs and blend the dry and the wet ingredients into a lumpy batter.
@@ -47,7 +47,7 @@
 
 <h3>Step 3</h3>
 	<p>
-		<img src="recipe/images/fry_pan.jpeg">
+		<img src="images/fry_pan.jpeg">
 	</p>
 	<P>
 		Heat some olive oil in a 6 inch fry pan over medium heat.
@@ -55,14 +55,14 @@
 
 <h3>Step 4</h3>
 	<p>
-		<img src="recipe/images/pour.jpeg">
+		<img src="images/pour.jpeg">
 	</p>
 	<p>Pour 1/2 cup of batter into the fry pan.
 
 
 <h3>Step 5</h3>		
 	<p>
-		<img src="recipe/images/cook.jpeg">
+		<img src="images/cook.jpeg">
 
 	</P>
 	<p>
@@ -71,7 +71,7 @@
 
 <h3>Step 6</h3>
 	<p>
-		<img src="recipe/images/flip.jpeg">
+		<img src="images/flip.jpeg">
 	</P>
 	<p>
 		Flip and cook another 2-3 minutes until golden on both sides.
@@ -79,7 +79,7 @@
 
 <h3>Step 7</h3>
 	<p>
-		<img src="recipe/images/syrup.jpeg">
+		<img src="images/syrup.jpeg">
 
 	</p>
 	<p>
@@ -88,10 +88,10 @@
 
 <h2> Enjoy!</h2>
 	<p>
-		<img src="recipe/images/done1.jpeg">
+		<img src="images/done1.jpeg">
 	</p>
 	<p>
-		<img src="recipe/images/done2.jpeg">
+		<img src="images/done2.jpeg">
 	</p>
 </body>
 </html>
