--- a/recipe/index.html
+++ b/recipe/index.html
@@ -2,6 +2,7 @@
 
 <html>
 <head>
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700,900,100,500' rel='stylesheet' type='text/css'>
 	<link href="global.css" rel="stylesheet">
 	<!-- add space before rel -->
 	
@@ -13,8 +14,7 @@
 <body>
 <h1>Weekend Blueberry Pancakes Recipe</h1>
 
-<h2>Ingredients</h2>
-	<p>
+	<h2>Ingredients</h2>
 		<ul>
 		<li>2 eggs</li>
 		<li>2 cups pancake mix</li> 
@@ -22,22 +22,22 @@
 		<li>1 cup half and half</li>
 		<li>Nutella and maple syrup</li>
 		</ul>	
-	</p>
+<!-- no p tags needed for lists-->
 	<p>
 		<img src="images/ingredients.jpeg">
-	</P>
+	</p>
 
-<h2>Directions</h2>
+	<h2>Directions</h2>
 
-<h3>Step 1</h3>
+	<h3>Step 1</h3>
 	<p>
 		<img src="images/batter1.jpeg">
-	</P>
+	</p>
 	<p>
 		In a large mixing bowl, stir in pancake mix, half and half, and eggs.
 	</p>
 
-<h3>Step 2</h3>
+	<h3>Step 2</h3>
 	<p>
 		<img src="images/batter2.jpeg">
 	</p>
@@ -45,39 +45,39 @@
 		Beat the eggs and blend the dry and the wet ingredients into a lumpy batter.
 	</p>
 
-<h3>Step 3</h3>
+	<h3>Step 3</h3>
 	<p>
 		<img src="images/fry_pan.jpeg">
 	</p>
-	<P>
+	<p>
 		Heat some olive oil in a 6 inch fry pan over medium heat.
 	</p>
 
-<h3>Step 4</h3>
+	<h3>Step 4</h3>
 	<p>
 		<img src="images/pour.jpeg">
 	</p>
 	<p>Pour 1/2 cup of batter into the fry pan.
 
 
-<h3>Step 5</h3>		
+		<h3>Step 5</h3>		
 	<p>
 		<img src="images/cook.jpeg">
 
-	</P>
+	</p>
 	<p>
 		Sprinkle the top with some of the blueberries and cook 2-3 minutes.
 	</P>
 
-<h3>Step 6</h3>
+	<h3>Step 6</h3>
 	<p>
 		<img src="images/flip.jpeg">
-	</P>
+	</p>
 	<p>
 		Flip and cook another 2-3 minutes until golden on both sides.
 	</p>
 
-<h3>Step 7</h3>
+	<h3>Step 7</h3>
 	<p>
 		<img src="images/syrup.jpeg">
 
@@ -86,7 +86,7 @@
 		Decorate the serving plate and serve with warm maple syrup.
 	</p>
 
-<h2> Enjoy!</h2>
+	<h2> Enjoy!</h2>
 	<p>
 		<img src="images/done1.jpeg">
 	</p>
