--- a/recipe/index.html
+++ b/recipe/index.html
@@ -57,7 +57,7 @@
 	<p>
 		<img src="images/pour.jpeg">
 	</p>
-	<p>Pour 1/2 cup of batter into the fry pan.
+	<p>Pour 1/2 cup of batter into the fry pan.</p>
 
 
 		<h3>Step 5</h3>		
@@ -67,7 +67,7 @@
 	</p>
 	<p>
 		Sprinkle the top with some of the blueberries and cook 2-3 minutes.
-	</P>
+	</p>
 
 	<h3>Step 6</h3>
 	<p>
