--- a/artist3/about.html
+++ b/artist3/about.html
@@ -31,8 +31,8 @@
 				</p>
 				
 				<div class="box">
+				<h2>Contents</h2>
 				<ul>
-				<h2>Content</h2>
 				<li><a href="#earlylife">Early Life</a></li> <!-- "#" links within the page -->    
 
 				<li><a href="#career">Career</a></li>
