--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-<h1>Book me early~ See you all in January *^_^* <br>-XOXO Carina</h1>
+
+<div class="greeting">
+	<h1>Book me early~ See you all in January *^_^* <br>-XOXO Carina</h1>
+</div>
+	
 <div id="container">
 		<div class="grid front-row"> 
 			<div class="col-1-7">
