--- a/index.html
+++ b/index.html
@@ -69,21 +69,27 @@
 			<div class="col-1-7">
 				<h2>1</h2>
 				<div id="jan-1-availability" class="availability" data-day="1">
-					<a href="#openModal">Availability</a>
+					<img src="images/lunch.png">
+					<img src="images/ice-cream.png">
+					<img src="images/dinner3.png">
 				</div>
 			</div>
 			
 			<div class="col-1-7">
 				<h2>2</h2>
 				<div id="jan-2-availability" class="availability" data-day="2">
-					<a href="#openModal">Availability</a>
+					<img src="images/lunch.png">
+					<img src="images/ice-cream.png">
+					<img src="images/dinner3.png">
 				</div>
 			</div>
 			
 			<div class="col-1-7">
 				<h2>3</h2>
 				<div id="jan-3-availability" class="availability" data-day="3">
-					<a href="#openModal">Availability</a>
+					<img src="images/lunch.png">
+					<img src="images/ice-cream.png">
+					<img src="images/dinner3.png">
 				</div>
 			</div>
 		</div>
@@ -92,49 +98,63 @@
 			<div class="col-1-7">
 				<h2>4</h2>
 				<div id="jan-4-availability" class="availability" data-day="4">
-					<a href="#openModal">Availability</a>
+					<img src="images/lunch.png">
+					<img src="images/ice-cream.png">
+					<img src="images/dinner3.png">
 				</div>
 			</div>
 			
 			<div class="col-1-7">
 				<h2>5</h2>
 				<div id="jan-5-availability" class="availability" data-day="5">
-					<a href="#openModal">Availability</a>
+					<img src="images/lunch.png">
+					<img src="images/ice-cream.png">
+					<img src="images/dinner3.png">
 				</div>
 			</div>
 			
 			<div class="col-1-7">
 				<h2>6</h2>
 				<div id="jan-6-availability" class="availability" data-day="6">
-					<a href="#openModal">Availability</a>
+					<img src="images/lunch.png">
+					<img src="images/ice-cream.png">
+					<img src="images/dinner3.png">
 				</div>
 			</div>
 			
 			<div class="col-1-7">
 				<h2>7</h2>
 				<div id="jan-7-availability" class="availability" data-day="7">
-					<a href="#openModal">Availability</a>
+					<img src="images/lunch.png">
+					<img src="images/ice-cream.png">
+					<img src="images/dinner3.png">
 				</div>
 			</div>
 			
 			<div class="col-1-7">
 				<h2>8</h2>
 				<div id="jan-8-availability" class="availability" data-day="8">
-					<a href="#openModal">Availability</a>
+					<img src="images/lunch.png">
+					<img src="images/ice-cream.png">
+					<img src="images/dinner3.png">
 				</div>
 			</div>
 			
 			<div class="col-1-7">
 				<h2>9</h2>
 				<div id="jan-9-availability" class="availability" data-day="9">
-					<a href="#openModal">Availability</a>
+					<img src="images/lunch.png">
+					<img src="images/ice-cream.png">
+					<img src="images/dinner3.png">
 				</div>
 			</div>
 			
 			<div class="col-1-7">
 				<h2>10</h2>
 				<div id="jan-10-availability" class="availability" data-day="10">
-					<a href="#openModal">Availability</a>
+					<img src="images/lunch.png">
+					<img src="images/ice-cream.png">
+					<img src="images/dinner3.png">
 				</div>
 			</div>
 		</div>
@@ -143,49 +163,63 @@
 			<div class="col-1-7">
 				<h2>11</h2>
 				<div id="jan-11-availability" class="availability" data-day="11">
-					<a href="#openModal">Availability</a>
+					<img src="images/lunch.png">
+					<img src="images/ice-cream.png">
+					<img src="images/dinner3.png">
 				</div>
 			</div>
 			
 			<div class="col-1-7">
 				<h2>12</h2>
 				<div id="jan-12-availability" class="availability" data-day="12">
-					<a href="#openModal">Availability</a>
+					<img src="images/lunch.png">
+					<img src="images/ice-cream.png">
+					<img src="images/dinner3.png">
 				</div>
 			</div>
 			
 			<div class="col-1-7">
 				<h2>13</h2>
 				<div id="jan-13-availability" class="availability" data-day="13">
-					<a href="#openModal">Availability</a>
+					<img src="images/lunch.png">
+					<img src="images/ice-cream.png">
+					<img src="images/dinner3.png">
 				</div>
 			</div>
 			
 			<div class="col-1-7">
 				<h2>14</h2>
 				<div id="jan-14-availability" class="availability" data-day="14">
-					<a href="#openModal">Availability</a>
+					<img src="images/lunch.png">
+					<img src="images/ice-cream.png">
+					<img src="images/dinner3.png">
 				</div>
 			</div>
 			
 			<div class="col-1-7">
 				<h2>15</h2>
 				<div id="jan-15-availability" class="availability" data-day="15">
-					<a href="#openModal">Availability</a>
+					<img src="images/lunch.png">
+					<img src="images/ice-cream.png">
+					<img src="images/dinner3.png">
 				</div>
 			</div>
 			
 			<div class="col-1-7">
 				<h2>16</h2>
 				<div id="jan-16-availability" class="availability" data-day="16">
-					<a href="#openModal">Availability</a>
+					<img src="images/lunch.png">
+					<img src="images/ice-cream.png">
+					<img src="images/dinner3.png">
 				</div>
 			</div>
 			
 			<div class="col-1-7">
 				<h2>17</h2>
 				<div id="jan-17-availability" class="availability" data-day="17">
-					<a href="#openModal">Availability</a>
+					<img src="images/lunch.png">
+					<img src="images/ice-cream.png">
+					<img src="images/dinner3.png">
 				</div>
 			</div>
 		</div>	
@@ -235,8 +269,13 @@ Parse.initialize("rsiGE2TI0oCXADiQTwUzB6h6cTiAWYUtLDDGTMwP", "wjSaS0qFpgQa31dsar
 <script>
 	var availabilityDay = null;
 
-	$('.availability a').click(function() {
-		var $parent = $(this).parent();
+	$('.availability img').click(function() {
+		var $img = $(this),
+			$parent = $img.parent();
+
+		var imgIndex = $parent.children().index(this);
+		$('#modal-content input[name=meal]').eq(imgIndex).prop('checked', true);
+
 		availabilityDay = $parent.data('day');
 		$('#modal-title').text('January ' + availabilityDay);
 
@@ -261,6 +300,8 @@ Parse.initialize("rsiGE2TI0oCXADiQTwUzB6h6cTiAWYUtLDDGTMwP", "wjSaS0qFpgQa31dsar
 				}
 			}
 		});
+
+		window.location.hash = 'openModal';
 	});
 
 	$('#modal-content button').click(function() {
@@ -272,6 +313,7 @@ Parse.initialize("rsiGE2TI0oCXADiQTwUzB6h6cTiAWYUtLDDGTMwP", "wjSaS0qFpgQa31dsar
 			saveReservation(name, availabilityDay, meal, function(reservation) {
 				var $content = $('#modal-content');
 				showModalSuccess();
+				refreshCalendarReservations();
 
 				setTimeout(function() {
 					window.location.hash = '#close';
@@ -280,7 +322,7 @@ Parse.initialize("rsiGE2TI0oCXADiQTwUzB6h6cTiAWYUtLDDGTMwP", "wjSaS0qFpgQa31dsar
 		}
 	});
 
-	var reservations = [];
+	refreshCalendarReservations();
 </script>
 
 </body>
