--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href='http://fonts.googleapis.com/css?family=Coming+Soon' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Crafty+Girls' rel='stylesheet' type='text/css'>
 
-<script src="//www.parsecdn.com/js/parse-1.3.1.min.js"></script>
+<script src="https://www.parsecdn.com/js/parse-1.3.1.min.js"></script>
 <script src="jquery-1.11.1.min.js"></script>
 
 </head>
@@ -248,9 +248,12 @@
 
 				<input id="radio-dinner" type="radio" name="meal" value="dinner">
 				<label for="radio-dinner">Dinner</label><br>
+				
+				<label for="modal-message">Message(optional):</label>
+				<input id="modal-message" type="text" name="message"><br>
 
 				<div>
-					<button type="button" id="modal-submit">Book me!</button>
+					<button type="button" id="modal-submit">Book Me</button>
 				</div>
 			</form>
 		</div>
