--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html>
 <head>
-<title>Carina's Design</title>
+<title>Carina's Space</title>
 <link href="style.css" rel="stylesheet" type="text/css" charset="utf-8">
 <link href='http://fonts.googleapis.com/css?family=Coming+Soon' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Crafty+Girls' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
 
 <script src="https://www.parsecdn.com/js/parse-1.3.1.min.js"></script>
 <script src="jquery-1.11.1.min.js"></script>
@@ -14,7 +16,8 @@
 <body>
 
 <div class="greeting">
-	<h1>Book me early~ See you all in January *^_^* <br>-XOXO Carina</h1>
+	<h1>Book me early~ See you all in January *^_^* <br>-XOXO Huan</h1>
+	<p>Please note that lunch is 12pm to 2pm, afternoon tea 3pm to 5pm, and dinner 6pm to 9pm. <br>If multiple time periods are desired, please specify in message area.</p>
 </div>
 	
 <div id="container">
@@ -259,7 +262,7 @@
 		</div>
 
 		<div id="modal-success" style="display:none;">
-			<h2>Booked! *^_^*</h2>
+			<h2>Booked. *^_^*</h2>
 		</div>
 	</div>
 </div>
@@ -287,19 +290,22 @@ Parse.initialize("rsiGE2TI0oCXADiQTwUzB6h6cTiAWYUtLDDGTMwP", "wjSaS0qFpgQa31dsar
 		queryReservationsForDay(availabilityDay, function(reservations) {
 			showModalContent();
 
-			$('#modal-content input').show();
-			$('#modal-content label').show();
+			$('#modal-content input').show().prop('disabled', false);
+			$('#modal-content label').show().css('opacity', 1.0);
 
 			// Do something with the returned Parse.Object values
 			for (var i = 0; i < reservations.length; i++) {
 				var reservation = reservations[i];
 				var meal = reservation.get('meal');
 				if (meal == 'lunch') {
-					$('#radio-lunch, label[for=radio-lunch]').hide();
+					$('#radio-lunch').prop('disabled', true);
+					$('label[for=radio-lunch]').css('opacity', 0.4);
 				} else if (meal == 'afternoonTea') {
-					$('#radio-afternoon-tea, label[for=radio-afternoon-tea]').hide();
+					$('#radio-afternoon-tea').prop('disabled', true);
+					$('label[for=radio-afternoon-tea]').css('opacity', 0.4);
 				} else if (meal == 'dinner') {
-					$('#radio-dinner, label[for=radio-dinner]').hide();
+					$('#radio-dinner').prop('disabled', true);
+					$('label[for=radio-dinner]').css('opacity', 0.4);
 				}
 			}
 		});
