--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@ Parse.initialize("rsiGE2TI0oCXADiQTwUzB6h6cTiAWYUtLDDGTMwP", "wjSaS0qFpgQa31dsar
 			showModalContent();
 
 			$('#modal-content input').show().prop('disabled', false);
+			$('#modal-content button').prop('disabled', false).css('opacity', 1.0);
 			$('#modal-content label').show().css('opacity', 1.0);
 
 			// Do something with the returned Parse.Object values
@@ -318,6 +319,9 @@ Parse.initialize("rsiGE2TI0oCXADiQTwUzB6h6cTiAWYUtLDDGTMwP", "wjSaS0qFpgQa31dsar
 		var $selectedRadio = $('#modal-content input[name=meal]:checked');
 		if (name.length && $selectedRadio.length) {
 			var meal = $selectedRadio.val();
+			
+			$('#modal-content input').prop('disabled', true);
+			$('#modal-content button').prop('disabled', true).css('opacity', 0.4);
 
 			saveReservation(name, availabilityDay, meal, function(reservation) {
 				var $content = $('#modal-content');
