--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <title>Carina's Space</title>
 <link href="style.css" rel="stylesheet" type="text/css" charset="utf-8">
-<link href='http://fonts.googleapis.com/css?family=Coming+Soon' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+<link href='http://fonts.useso.com/css?family=Coming+Soon' rel='stylesheet' type='text/css'>
+<link href='http://fonts.useso.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
 
 <script src="https://www.parsecdn.com/js/parse-1.3.1.min.js"></script>
 <script src="jquery-1.11.1.min.js"></script>
