--- a/deyoung2/index.html
+++ b/deyoung2/index.html
@@ -80,31 +80,34 @@
 	
 		 <footer>
         	<div class="grid">
-        		<div class="col-1-3">
+        		<div class="col-1-2">
         			<h2>Fine Arts Museums of San Francisco</h2>
-        			<ul>
-        				<li>
-        					<span class="day">Wednesday</span>
-        					<span class="hours"> Noon - 5:00</span>
-        				</li>
-        				<li>
-        					<span class="day">Thursday</span>
-        					<span class="hours"> Closed</span>
-        				<li>	
-							<span class="day">Friday</span>
-							<span class="hours">Noon - 2:30</span>
-						</li>
-        			</ul>
+        			 <p>Golden Gate Park<br>50 Hagiwara Tea Garden Drive<br>San Francisco, CA 94118<br>415-750-3600</p>     		
         		</div>
-        		<div class="col-1-3">
-        			<h2>Testimonials</h2>
-        			 	<span>
-        				Hey! What happened to my Death Star??
-        			 	</span>    			        			        		
+        		
+        		<div class="col-1-4">
+        			<h2>Learn More</h2>
+        			 	<ul>
+        			 		<li><a href="#">About</a></li>
+        			 		<li><a href="#">Contact</a></li>
+        			 		<li><a href="#">Employment</a></li>
+        			 		<li><a href="#">Privacy Policy</a></li>
+        			 		<li><a href="#">Terms of Use</a></li>
+        			 		<li><a href="#">Accessibility</a></li>
+        			 	</ul>	        			        		
         		</div>
-        		<div class="col-1-3">
-					<h2>Something else</h2>
+        		<div class="col-1-4">
+					<h2>Connect with Us</h2>
+						<ul>
+        			 		<li><a href="#">Facebook</a></li>
+        			 		<li><a href="#">Google +</a></li>
+        			 		<li><a href="#">Twitter</a></li>
+        			 		<li><a href="#">Youtube</a></li>
+        			 		<li><a href="#">Instagram</a></li>
+        			 		<li><a href="#">Pinterest</a></li>
+        			 	</ul>	        
         		</div>
+        		        		
         	</div>
         </footer>
 
